# object_recognition_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml  view_segmentation.bash
data/: listDataSet.data  listDataSet.txt  segmented.pcd
data/new/: bbbbbbb_error.txt  catatan.txt  listDataSetv2.1.txt
log/: latest_list
msg/: bbox.msg  data_completed.msg  trackbar.msg  vfh.msg
output/: cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cloud_cluster_4.pcd  cloud_cluster_5.pcd
output/cluster/: cloud_cluster_0.pcd  cloud_cluster_1.pcd
output/filter/: voxel_grid.pcd
output/segmentation/: planar0.pcd  planar_removed0.pcd
output/vfh/: vfh_0.pcd  vfh_1.pcd
scripts/: publisher_node.py  subcriber_node.py
src/: camera_node.cpp  extract_feature.cpp  learnfann.cpp  main.cpp  main_camera.cpp  main_trainning.cpp  main_trainning_own_dataset.cpp  main_trainning_testing.cpp  opencv.cpp  preprocesing_node.cpp  segmentation.cpp  testviz.cpp  trackbar_node.cpp  try_kinect.cpp  visualize_node.cpp
src/explode_node/: 1_camera_node.cpp  2_preprocesing_node.cpp
